--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@streamsql/streamsql-js",
   "author": "StreamSQL <ethan@streamsql.io>",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "license": "MIT",
   "description": "StreamSQL's javascript ingestion API",
   "main": "streamsql.cjs.js",
